# CrealityPrint

./: .commitlintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  Build.PL  BuildLinux.sh  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Creative3D.pro  Creative3DTest.pro  DockerBuild.sh  DockerRun.sh  Dockerfile  README.md  SECURITY.md  build_deps.bat  build_info.cmake  build_ninja_vs2012_debug.bat  build_ninja_vs2019_debug.bat  build_release_macos.sh  buildinfo.h.in  changelog.config.js  conandata.yml  extract_deps.bat  graph.txt  license.rtf  license_en.rtf  orca_build_release.bat  package-lock.json  package.json  project_build.bat  run_gettext.bat  run_gettext.sh  start.bat  version.inc
Creative3D/: CMakeLists.txt  Creative3D.icns  Creative3D.pro  Creative3D.rc  default.desktop  graphicscard_blacklist.txt  qt.qrc  run.txt  scence3d.qrc  translations.qrc
Creative3D/res/: CMacMenu.qml  CMachineTab.qml  CSliceButton.qml  CSliceSeletorPanel.qml  CToolBar.qml  CWinMenu.qml  InfosPanel.qml  MainWindow.qml  MainWindow2.qml  main.qml
Creative3D/src/: main.cpp  scence3dapp.cpp  scence3dapp.h
cadcore/: CMakeLists.txt  conandata.yml  graph.txt
cadcore/cadcore/: interface.hpp
compare_3mf/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  CommonData.h  CompareBase.cpp  CompareBase.h  CompareCustomGcode.cpp  CompareCustomGcode.h  CompareGcode.cpp  CompareGcode.h  CompareHelper.cpp  CompareHelper.h  CompareImage.cpp  CompareImage.h  CompareLayerHeight.cpp  CompareLayerHeight.h  CompareModel.cpp  CompareModel.h  CompareModelSettings.cpp  CompareModelSettings.h  CompareProjectSettings.cpp  CompareProjectSettings.h  CompareSliceInfo.cpp  CompareSliceInfo.h  Constant3mf.h  dummy.cpp  main.cpp
crslice2/crslice/: CMakeLists.txt  Slice3rBase.cmake  conandata.yml  crslice.h.prebuild
kernel/BasicKernel/: CMakeLists.txt
msbase/: CMakeLists.txt  conandata.yml
msbase/msbase/: interface.h
nestplacer/: CMakeLists.txt  LICENSE GPL v3  conandata.yml  graph.txt
nestplacer/impl/: concaveplacer.cpp  conv.cpp  conv.h  data.h  debug.cpp  debug.h  nestplacer.cpp  placer.cpp  printpiece.cpp
nestplacer/libnest2d/: libnest2d.cmake
nestplacer/nestplacer/: concaveplacer.h  export.h  nestplacer.h  placer.h  printpiece.h
nestplacer/svg/: aabb.cpp  aabb.h  coord_t.h  floatpoint.h  intpoint.h  point2.cpp  point2.h  point3.cpp  point3.h  polygon.cpp  polygon.h  svg.cpp  svg.h
plugins/: CMakeLists.txt  conandata.yml  graph.txt  plugins.in
plugins/CrealityMainWindow/: CrealityMainWindow.pro  main.cpp  main.qml  qml.qrc
plugins/CrealityUI/: CMakeLists.txt  CrealityUI.pro  font.qrc  image.qrc  qml.qrc  qmldir
plugins/CrealityUIComponent/: CMakeLists.txt  CrealityUIComponent.pro  qml.qrc  qmldir
plugins/CrealityUITest/: ButtonShowPage.qml  CrealityUITest.pro  MainWindow.qml  SliderShowPage.qml  TextShowPage.qml  main.cpp  main.qml  qml.qrc
plugins/plugin_adaptive_layer/: CMakeLists.txt  adaptivelayercommand.cpp  adaptivelayercommand.h  adaptivelayermode.cpp  adaptivelayermode.h  adaptivelayerplugin.cpp  adaptivelayerplugin.h  adaptiveundocommand.cpp  adaptiveundocommand.h
plugins/plugin_color/: CMakeLists.txt  coloroperatemode.cpp  coloroperatemode.h  colorplugin.cpp  colorplugin.h
plugins/plugin_cx3d_exporter/: CMakeLists.txt  cx3dautosaveproject.cpp  cx3dautosaveproject.h  cx3dclearprojectcommand.cpp  cx3dcloseprojectcommand.cpp  cx3dcloseprojectcommand.h  cx3dexporter.cpp  cx3dexporter.h  cx3dexportercommand.cpp  cx3dexportercommand.h  cx3dexportjob.cpp  cx3dexportjob.h  cx3dimportercommand.cpp  cx3dimportercommand.h  cx3drenderex.cpp  cx3drenderex.h  cx3dscene.cpp  cx3dsubmenurecentproject.cpp  cx3dwriter.cpp  cx3dwriter.h  loadprojectcommand.cpp  loadprojectcommand.h
plugins/plugin_distance_measure/: AbstractMeasureObj.cpp  AbstractMeasureObj.h  CMakeLists.txt  MeasureObjFactory.cpp  MeasureObjFactory.h  Point2PointMeasureObj.cpp  Point2PointMeasureObj.h  dismeasurecommand.cpp  dismeasurecommand.h  dismeasureop.cpp  dismeasureop.h  distancemeasureplugin.cpp  distancemeasureplugin.h
plugins/plugin_drill/: CMakeLists.txt  drillcommand.cpp  drillcommand.h  drilljob.cpp  drilljob.h  drilloperatemode.cpp  drilloperatemode.h  drillplugin.cpp  drillplugin.h
plugins/plugin_hollow/: CMakeLists.txt  hollowcommand.cpp  hollowcommand.h  hollowjob.cpp  hollowjob.h  hollowoperatemode.cpp  hollowoperatemode.h  hollowplugin.cpp  hollowplugin.h
plugins/plugin_info/: CMakeLists.txt  info.qrc  infoplugin.cpp  infoplugin.h  infoprovider.cpp  infoprovider.h  zsliderinfo.cpp  zsliderinfo.h
plugins/plugin_laser/: CMakeLists.txt  DrawObject.cpp  LaserAddCommand.cpp  LaserAddCommand.h  ObjectChangedCommand.cpp  ObjectChangedCommand.h  PlotterUndo.cpp  PlotterUndo.h  c2dlib.cpp  c2dlib.h  drawobject.h  drawobjectmodel.cpp  drawobjectmodel.h  imageproc.cpp  imageproc.h  laserdispatch.cpp  laserdispatch.h  laserexportfile.cpp  laserexportfile.h  lasergcodework.cpp  lasergcodework.h  laserimgprovider.cpp  laserimgprovider.h  laserplugin.cpp  laserplugin.h  laserscene.cpp  laserscene.h  lasersettings.cpp  lasersettings.h  plottersettings.cpp  plottersettings.h
plugins/plugin_letter/: CMakeLists.txt  lettercommand.cpp  lettercommand.h  letterjob.cpp  letterjob.h  letterop.cpp  letterop.h  letterplugin.cpp  letterplugin.h
plugins/plugin_localnet/: CMakeLists.txt  cuslistmodel.cpp  cuslistmodel.h  cusscanmodel.cpp  cusscanmodel.h  filelistmodel.cpp  filelistmodel.h  fliterproxymodel.cpp  fliterproxymodel.h  gcodelistmodel.cpp  gcodelistmodel.h  historylistmodel.cpp  historylistmodel.h  imgprovider.cpp  imgprovider.h  localnetplugin.cpp  localnetplugin.h  materialLinkageModel.cpp  materialLinkageModel.h  sortproxymodel.cpp  sortproxymodel.h  videolistmodel.cpp  (+1 more)
qcxchart/: CMakeLists.txt  conandata.yml  graph.txt
qcxffmpeg/: CMakeLists.txt  conandata.yml  graph.txt
qtuser_3d/: CMakeLists.txt  graph.txt
src/: CMakeLists.txt  CrealityPrint.cpp  CrealityPrint_app_msvc.cpp  CrealityPrint_profile_validator.cpp  CxMiniDump.cpp  CxMiniDump.h
topomesh/: CMakeLists.txt  conandata.yml  graph.txt
(+6499 files in other folders)
